# icp-solana-bridge

./: README.md
icp-bridge/: Cargo.toml  README.md  dfx.json  package.json
icp-bridge/src/icp-bridge-backend/: Cargo.toml  icp-bridge-backend.did
icp-bridge/src/icp-bridge-backend/src/: lib.rs  threshold_schnorr.rs
icp-bridge/src/icp-bridge-frontend/: package.json
icp-bridge/src/icp-bridge-frontend/src/: App.js
solana-program/: .env  Anchor.toml  package-lock.json  package.json
solana-program/migrations/: deploy.ts
solana-program/programs/solana-program/: Cargo.toml
solana-program/programs/solana-program/src/: lib.rs
solana-program/programs/solana-program/src/utils/: ed25519.rs  mod.rs
solana-program/tests/: test.ts
